Repository cleanup before final push
- Remove .DS_Store files from git tracking
- Delete SegmentMaps.lean.bak backup file
- Add GoldenRatioHelpers.lean module to git
- Update .gitignore with comprehensive patterns for temp/backup files
- Fix directory typo: rename 'promts' to 'prompts'
- Organize documentation: move paper PDF to docs/references/
- Remove Python cache files from git
- Create docs/references/README to document the paper

This cleanup improves repository professionalism while preserving all
important work. No code changes were made, only organizational improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 .DS_Store
 scratch_*.lean
 test_*.lean
+
+# Backup and temporary files
+*.bak
+*.tmp
+*.swp
+*~
+
+# Python artifacts
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Editor artifacts
+.vscode/
+*.sublime-*
